# tuliprox

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  COMPILATION_FIXES.md  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-bake.hcl  docker-bake.yml
backend/: Cargo.toml  Cargo.toml.openssl-bak  build.rs
backend/src/: main.rs  messaging.rs  modules.rs
backend/src/api/: api_utils.rs  bak.main_api.rs  config_file.rs  config_watch.rs  hdhomerun_proprietary.rs  hdhomerun_ssdp.rs  main_api.rs  mod.rs  panel_api.rs  scheduler.rs  serve.rs  sys_usage.rs
backend/src/api/endpoints/: api_playlist_utils.rs  bak.web_index.rs  custom_video_stream_api.rs  download_api.rs  extract_accept_header.rs  hdhomerun_api.rs  hls_api.rs  library_api.rs  m3u_api.rs  mod.rs  user_api.rs  v1_api.rs  v1_api_config.rs  v1_api_playlist.rs  v1_api_user.rs  vod_api.rs  web_index.rs  web_index.rs.openssl-bak  websocket_api.rs  xmltv_api.rs  xtream_api.rs
backend/src/auth/: access_token.rs  authenticator.rs  fingerprint.rs  mod.rs  password.rs
backend/src/foundation/: filter.rs  mapper.rs
backend/src/model/: additional_properties.rs  config.rs  config_api_proxy.rs  config_cache.rs  config_download.rs  config_epg.rs  config_healthcheck.rs  config_input.rs  config_ip_check.rs  config_log.rs  config_messaging.rs  config_proxy.rs  config_sort.rs  config_source.rs  config_target.rs  config_web_auth.rs  config_webui.rs  healthcheck.rs  input_source.rs  mapping.rs  media_properties.rs  messaging.rs  mod.rs  playlist.rs  playlist_categories.rs  stats.rs  trakt.rs  xmltv.rs  xtream.rs
backend/src/processing/: input_cache.rs  mod.rs  playlist_watch.rs
backend/src/proxy/: manager.rs
backend/src/ptt/: constants.rs  handlers.rs  mod.rs  models.rs  parser.rs  transformers.rs
backend/src/repository/: alias_repository.rs  bplustree.rs  epg_repository.rs  indexed_document.rs  library_repository.rs  m3u_playlist_iterator.rs  m3u_repository.rs  mod.rs  playlist_repository.rs  playlist_scratch.rs  playlist_source.rs  sorted_index.rs  storage.rs  storage_const.rs  strm_repository.rs  target_id_mapping.rs  user_repository.rs  xtream_playlist_iterator.rs  xtream_repository.rs
backend/src/tools/: atomic_once_flag.rs  directed_graph.rs  lru_cache.rs  mod.rs
backend/src/utils/: binary_utils.rs  bincode_utils.rs  crypto_utils.rs  crypto_utils.rs.openssl-bak  db_viewer.rs  epg_parser.rs  geoip.rs  hash_utils.rs  json_utils.rs  logging.rs  mod.rs  step_measure.rs  sys_utils.rs  telegram.rs
backend/src/vod/: classifier.rs  metadata.rs  metadata_resolver.rs  metadata_storage.rs  mod.rs  nfo_reader.rs  processor.rs  scanner.rs  tmdb_client.rs
frontend/: Cargo.toml  Trunk.toml  bootstrap.js  index.html  package.json
frontend/public/: config.json
frontend/public/assets/: fonts.css  icons.json
frontend/scss/: _default.scss  _size.scss  _theme.scss  main.scss
frontend/scss/app/: _app.scss  _app_header.scss  _component.scss
frontend/src/: error.rs  index.tsx  lib.rs  main.rs
frontend/src/app/: context.rs  mod.rs
frontend/src/hooks/: mod.rs  use_icon_context.rs  use_server_status.rs  use_service_context.rs
frontend/src/model/: busy_status.rs  dialog.rs  event_message.rs  explorer_source_type.rs  mod.rs  server-config.ts  ui-config.ts  view_type.rs  web_config.rs
frontend/src/provider/: dialog_provider.rs  icon_context_provider.rs  mod.rs  service_context_provider.rs
frontend/src/scss/: _common.scss  _default.scss  _panel.scss  _preferences.scss  _theme.scss
frontend/src/services/: auth_service.rs  config_service.rs  dialog_service.rs  event_service.rs  mod.rs  playlist_service.rs  requests.rs  status_service.rs  streams_service.rs  toastr_service.rs  user_api_service.rs  user_service.rs  websocket_service.rs
frontend/src/utils/: mod.rs  storage.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/error/: mod.rs  tuliprox_error.rs
shared/src/foundation/: filter.pest  filter.rs  mapper.pest  mapper.rs  mod.rs  value_provider.rs
shared/src/model/: active_user_connection_change.rs  cluster_flags.rs  epg.rs  epg_request.rs  info_doc_utils.rs  ip_check.rs  item_field.rs  library_request.rs  mapping.rs  messaging.rs  mod.rs  playlist.rs  playlist_categories.rs  playlist_document.rs  playlist_info_document.rs  playlist_request.rs  processing_order.rs  regex_cache.rs  search_request.rs  short_epg.rs  stats.rs  status_check.rs  stream_info.rs  stream_properties.rs  strm_export_style.rs  system_info.rs  target_type.rs  ui_playlist_item.rs  user_command.rs  uuidtype.rs  web_socket.rs  webplayer_url_request.rs  xtream.rs  xtream_const.rs
shared/src/utils/: bincode_utils.rs  constants.rs  default_utils.rs  directed_graph.rs  hash_utils.rs  hdhomerun_utils.rs  json_utils.rs  mod.rs  net_utils.rs  number_utils.rs  request.rs  serde_utils.rs  size_utils.rs  string_interner.rs  string_utils.rs  time_utils.rs
webui/: Cargo.toml  Trunk.toml  index.html
webui/public/: config.json
webui/public/assets/: fonts.css  icons.json
webui/scss/: _action_card.scss  _app.scss  _app_header.scss  _card.scss  _collapse_panel.scss  _common.scss  _component.scss  _dashboard_view.scss  _default.scss  _icon_button.scss  _input.scss  _login.scss  _menu_item.scss  _panel.scss  _playlist_view.scss  _preferences.scss  _reveal_content.scss  _sidebar.scss  _size.scss  _status_card.scss  _table.scss  _text_button.scss  _theme.scss  _toggle_switch.scss  main.scss
webui/scss/app/: _app.scss  _app_header.scss  _component.scss
webui/src/: config.rs  lib.rs
webui/src/app/: context.rs  mod.rs
webui/src/hooks/: mod.rs  use_icon_context.rs  use_server_status.rs  use_service_context.rs
webui/src/model/: dialog.rs  event_message.rs  explorer_source_type.rs  mod.rs  view_type.rs  web_config.rs
webui/src/provider/: dialog_provider.rs  icon_context_provider.rs  mod.rs  service_context_provider.rs
webui/src/services/: auth_service.rs  config_service.rs  dialog_service.rs  mod.rs  playlist_service.rs  requests.rs  status_service.rs  toastr_service.rs  websocket_service.rs
webui/src/utils/: mod.rs  storage.rs  utils.rs
(+734 files in other folders)
