[package]
name = "tuliprox"
version = "3.2.52"
edition = "2021"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_html = "2.7"
handlebars = "6"
shared = { version = "3", path = "../shared" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-saphyr = "0.0.14"
serde_json = { version = "1", features = ["raw_value"] }
quick-xml = { version = "0.39", features = ["async-tokio", "serialize"] }
regex = "1.12"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0", features = ["blocking", "json", "stream", "rustls-tls", "socks"] }
url = "2.5.8"
chrono = "0.4"
cron = "0.15"
axum = { version = "0.8" , features = ["macros", "default", "ws"]}
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "auth", "fs", "compression-full", "trace"] }
tower_governor = { version = "0.8", features = ["axum"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
rust-argon2 = "3"
futures = "0.3"
path-clean = "1.0"
pest = "2.8"
pest_derive = "2.8"
enum-iterator = "2"
openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
deunicode = "1.6.2"
mime = "0.3"
log = "0.4"
env_logger = "0.11"
rmp-serde = "1"
rand = "0.9"
fastrand = "2"
rpassword = "7.4"
flate2 = "1.1"
blake3 = "1.8"
bytes = "1.11"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "parking_lot", "fs"] }
#tokio = { version = "1.46", features = ["rt-multi-thread", "parking_lot", "fs", "tracing"] }
#console-subscriber = "0"
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-util =  { version = "0.7", features = ["io", "io-util"] }
tempfile = "3.24"
filetime = "0.2"
strsim = "0.11"
rphonetic = "3.0"
rayon = "1.11"
base64 = "0.22"
paste = "1.0"
indexmap = "2"
lz4_flex = "0.12"
memmap2 = "0.9"
fs2 = "0.4"
notify = "8.2"
arc-swap = "1.8"
dashmap = "6.1"
hyper = "1.8"
hyper-util = "0.1"
socket2 = { version = "0.6", features = ["all"] }
async-compression = { version = "0.4", features = ["tokio"] }
crc32fast = "1.5"
#[cfg(target_os = "macos")]
libc = "0.2"
#[cfg(target_os = "windows")]
winapi = { version = "0.3", features = ["psapi", "minwindef", "processthreadsapi"] }
chrono-tz = "0.10.4"
zeroize = "1.8.2"
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
uuid = { version = "1", features = ["v4"] }
fancy-regex = "0.17.0"
mime_guess = "2"
# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator =  { version = "*", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[build-dependencies]
vergen = { version = "9.0", features = ["build"] }
