[package]
name = "frontend"
version = "3.1.6"
edition = "2021"

[dependencies]
shared = { version = "3.1.6", path = "../shared" }
chrono = "0"
yew = "0.21"
yew-router = "0.18"
yew-hooks = "0.3"
yew-i18n = "0.1"
serde_json = "1"
serde = {version = "1.0", features = ["derive", "rc"] }
serde_cbor = "0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
anyhow = "1"
thiserror = "2"
reqwasm = {version = "0.5", features = ["json"]}
log = "0.4"
wasm-logger = "0.2"
gloo-storage = "0"
gloo-utils = "0"
gloo-timers = { version = "0", features = ["futures"] }
implicit-clone = "0"
futures-signals = "0.3"
futures = "0.3"
prost = "0"
wasm-bindgen-futures = "0"
bytes = "1"
regex = "1.11.2"
base64 = "0.22.1"
cron = "0.15"

[dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "Node", "Window", "HtmlCollection", "HtmlInputElement", "DomRect", "HtmlDialogElement", "CssStyleDeclaration"]

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"
gloo-utils = "0.2"
