[package]
name = "frontend"
version = "3.2.40"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
shared = { version = "3.2.40", path = "../shared" }
chrono = "0"
yew = "0.21"
yew-router = "0.18"
yew-hooks = "0.3.4"
yew-i18n = "0.1"
serde_json = {version = "1" }
serde = {version = "1.0", features = ["derive", "rc"] }
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
anyhow = "1"
thiserror = "2"
reqwasm = {version = "0.5", features = ["json"]}
log = "0.4"
wasm-logger = "0.2"
gloo-storage = "0.3"
gloo-utils = "0.2"
gloo-render = "0.2"
gloo-timers = { version = "0", features = ["futures"] }
implicit-clone = "0"
futures-signals = "0.3"
futures = "0.3"
prost = "0"
wasm-bindgen-futures = "0"
bytes = "1"
regex = "1.12.2"
base64 = "0.22.1"
cron = "0.15"
fastrand = "2.3.0"

[dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "Node", "Window", "HtmlCollection", "HtmlInputElement", "DomRect", "HtmlDialogElement", "CssStyleDeclaration"]

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"
gloo-utils = "0.2"
