[package]
name = "shared"
version = "3.1.7"
edition = "2021"

[dependencies]
bitflags = "2"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
enum-iterator = "2"
log = "0"
path-clean = "1"
url = "2.5.7"
indexmap = "2"
pest = "2"
pest_derive = "2"
serde_json = "1"
base64 = "0"
blake3 = "1"
fastrand = { version = "2", features = ["js"] }
zeroize = "1"
chrono = "0.4.42"
bytes = "1"
ciborium = "0.2.2"
