[package]
name = "shared"
version = "3.2.48"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
bitflags = "2"
serde = { version = "1.0", features = ["derive", "rc"] }
regex = "1"
enum-iterator = "2"
log = "0"
path-clean = "1"
url = "2.5.8"
indexmap = "2"
pest = "2"
pest_derive = "2"
serde_json =  "1"
base64 = "0"
blake3 = "1"
fastrand = { version = "2", features = ["js"] }
zeroize = "1"
chrono = "0.4.42"
bytes = "1"
ciborium = "0.2.2"
hex = "0.4.3"
lz4_flex = "0.12.0"
deunicode = "1.6.2"
serde-saphyr = "0.0.14"
dashmap = "6.1.0"
serde_tuple = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.83"
getrandom = { version = "0.3", features = ["wasm_js"] }
